--- a/src/views/TasksPeriodView.fxml
+++ b/src/views/TasksPeriodView.fxml
@@ -138,11 +138,6 @@
                   <Image url="@../images/back_icon.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="1122.0" layoutY="14.0" onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/minimize_icon.png" />
-               </image>
-            </ImageView>
             <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="1149.0" layoutY="14.0" onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/close_icon.png" />
@@ -242,6 +237,11 @@
                   <Font name="Arial Rounded MT Bold" size="25.0" />
                </font>
             </Label>
+            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="1122.0" layoutY="14.0" onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/minimize_icon.png" />
+               </image>
+            </ImageView>
             <Pane fx:id="allTasksPane" layoutX="72.0" layoutY="323.0" onMouseClicked="#allTasksPaneClicked" prefHeight="555.0" prefWidth="1089.0">
                <children>
                   <Pane prefHeight="50.0" prefWidth="1089.0">
@@ -256,7 +256,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -275,7 +275,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -294,7 +294,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -313,7 +313,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -332,7 +332,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -351,7 +351,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -370,7 +370,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -389,7 +389,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -408,7 +408,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -427,7 +427,7 @@
                               <Font name="Arial Rounded MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="923.0" prefHeight="50.0" prefWidth="166.0" style="-fx-wrap-text: true;" textFill="#2b2b2b">
                            <font>
                               <Font name="Arial Rounded MT Bold" size="20.0" />
                            </font>
@@ -436,6 +436,7 @@
                   </Pane>
                </children>
             </Pane>
+            <Line endX="-100.0" endY="567.0" layoutX="1098.0" layoutY="330.0" startX="-100.0" startY="-15.0" stroke="#2b2b2b" strokeLineCap="ROUND" style="-fx-stroke-width: 7;" />
          </children></Pane>
    </children>
 </AnchorPane>
