Go to Today button in Time & minor changes

--- a/src/views/TimeView.fxml
+++ b/src/views/TimeView.fxml
@@ -182,7 +182,7 @@
                   <Font name="Arial Rounded MT Bold" size="25.0" />
                </font>
             </Label>
-            <Pane fx:id="actionButton" layoutX="901.0" layoutY="137.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="54.0" prefWidth="221.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
+            <Pane fx:id="actionButton" layoutX="902.0" layoutY="66.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="54.0" prefWidth="221.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
                <children>
                   <Label fx:id="actionButtonLabel" alignment="CENTER" layoutX="32.0" layoutY="9.0" prefHeight="37.0" prefWidth="189.0" style="-fx-wrap-text: true;" text="Add Period" textFill="#e6bb9a">
                      <font>
@@ -194,6 +194,20 @@
                         <Image url="@../images/add_icon.png" />
                      </image>
                   </ImageView>
+               </children>
+            </Pane>
+            <Pane fx:id="goToTodayButton" layoutX="901.0" layoutY="138.0" onMouseClicked="#goToTodayButtonClicked" onMouseEntered="#goToTodayButtonHovered" onMouseExited="#goToTodayButtonExited" prefHeight="53.0" prefWidth="221.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
+               <children>
+                  <ImageView fx:id="goToTodayButtonImage" layoutX="14.0" layoutY="9.0">
+                     <image>
+                        <Image url="@../images/go_to_icon.png" />
+                     </image>
+                  </ImageView>
+                  <Label fx:id="goToTodayButtonLabel" alignment="CENTER" layoutX="58.0" layoutY="6.0" prefHeight="42.0" prefWidth="154.0" style="-fx-wrap-text: true; -fx-text-alignment: center;" text="Go to Today" textFill="#e6bb9a">
+                     <font>
+                        <Font name="Arial Rounded MT Bold" size="22.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
             <ImageView fx:id="goLeftButton" layoutX="8.0" layoutY="317.0" onMouseClicked="#goLeftClicked" onMouseEntered="#goLeftHovered" onMouseExited="#goLeftExited" pickOnBounds="true">
@@ -279,6 +293,11 @@
                   </BarChart>
                </children>
             </Pane>
+            <Label fx:id="errorMessage" alignment="CENTER" layoutX="907.0" layoutY="200.0" prefHeight="27.0" prefWidth="211.0" style="-fx-wrap-text: true;" textFill="WHITE">
+               <font>
+                  <Font name="Arial Rounded MT Bold" size="18.0" />
+               </font>
+            </Label>
          </children></Pane>
    </children>
 </AnchorPane>
